--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "dev": "vite"
   },
   "devDependencies": {
-    "@roxi/routify": "^3.0.0-next.97",
-    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.13",
-    "mdsvex": "^0.9.3",
-    "svelte": "^3.39.0",
-    "vite": "^2.2.3"
+    "@roxi/routify": "next",
+    "@sveltejs/vite-plugin-svelte": "latest",
+    "mdsvex": "latest",
+    "svelte": "latest",
+    "vite": "latest"
   }
 }
